fix: Added margin to fix layout on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ figcaption {
   transition: 0.3s;
   background-color: #c8cdd2;
   text-align: center;
+  margin: 20px 0;
 }
 
 .blog-img {
